# obs-lichess-next-challenger

./: Cargo.toml  README.md  obs-lichess-next-challenger.lua
junk/: cancel_challenge.json  new_challenge.json
src/: lib.rs
