[package]
name = "obs-lichess-next-opponent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["io"] }
futures = "0.3"
lazy_static = "1.4.0"
libc = "0.2.126"
serde_json = "1.0"
